SERVER-23126 Check result of connect when constructing DBClient from MongoURI

(cherry picked from commit 85e60b54d73f185113575bdcb82f691471e12478)